--- a/play.html
+++ b/play.html
@@ -11,7 +11,7 @@
         <div class="content-wrap">
             <h1>Enter your name:</h1>
             <div class="input-container">
-                <input type="text" id="username" name="username" placeholder="Enter your name">
+                <input type="text" id="username" name="username" class="submitUsername" placeholder="Enter your name">
             </div>
             
             <div class="button-container">
